--- a/public/index.css
+++ b/public/index.css
@@ -692,6 +692,10 @@ video {
   top: 50%;
 }
 
+.top-1\/3 {
+  top: 33.333333%;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -2431,6 +2435,10 @@ a, button {
 
   .md\:left-\[32px\] {
     left: 32px;
+  }
+
+  .md\:top-1\/2 {
+    top: 50%;
   }
 
   .md\:mx-4 {
