Change 1 word in about section

--- a/public/index.css
+++ b/public/index.css
@@ -652,12 +652,12 @@ video {
   bottom: 0px;
 }
 
-.bottom-32 {
-  bottom: 8rem;
+.bottom-\[145px\] {
+  bottom: 145px;
 }
 
-.bottom-\[95px\] {
-  bottom: 95px;
+.bottom-\[170px\] {
+  bottom: 170px;
 }
 
 .left-0 {
@@ -666,10 +666,6 @@ video {
 
 .left-1\/4 {
   left: 25%;
-}
-
-.left-\[16px\] {
-  left: 16px;
 }
 
 .right-0 {
@@ -692,8 +688,8 @@ video {
   top: 50%;
 }
 
-.top-1\/3 {
-  top: 33.333333%;
+.top-\[40\%\] {
+  top: 40%;
 }
 
 .z-10 {
@@ -903,6 +899,10 @@ video {
 
 .max-w-\[18rem\] {
   max-width: 18rem;
+}
+
+.max-w-\[1920px\] {
+  max-width: 1920px;
 }
 
 .max-w-\[400px\] {
@@ -2425,10 +2425,6 @@ a, button {
 }
 
 @media (min-width: 768px) {
-  .md\:bottom-20 {
-    bottom: 5rem;
-  }
-
   .md\:bottom-\[80px\] {
     bottom: 80px;
   }
