Add focus styles to links and buttons

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@ body {
     user-select: none;
 }
 
+a:focus, a:active
+button:focus, button:active {
+    outline: 2px solid white;
+}
+
 .main {
     @apply px-4 xs:px-8
 }
