--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@ body {
     user-select: none;
 }
 
-a:focus, a:active
-button:focus, button:active {
+a:focus-visible, 
+button:focus-visible {
     outline: 2px solid white;
 }
 
