Build latest tailwindcss

--- a/public/index.css
+++ b/public/index.css
@@ -1422,8 +1422,8 @@ body {
           user-select: none;
 }
 
-a:focus, a:active
-button:focus, button:active {
+a:focus-visible, 
+button:focus-visible {
   outline: 2px solid white;
 }
 
